# logsetup

./: .gitignore  license  pyproject.toml  readme.md  requirements.txt  setup.py
loginit/: handlers.py  logger.py
logsetup/: compat.py  handlers.py  logger.py  mailgun_api.py
