[project]
name = "logsetup"
version = "1.1"
description = "Python log initialization made easy"
readme = "readme.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Carter Temm", email = "cartertemm@gmail.com" }
]
dependencies = [
    "mailgun_api @ git+https://github.com/accessibleapps/mailgun-API.git",
    "pyprowl"
]

[project.urls]
Homepage = "https://github.com/cartertemm/logsetup"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
