[project]
name = "logsetup"
version = "1.4"
description = "Python log initialization made easy"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
	"Programming Language :: Python :: 3",
	"Operating System :: OS Independent",
	"Development Status :: 4 - Beta",
	"Topic :: System :: Logging"
]
license = "MIT"
license-files = ["license"]
authors = [
    { name = "Carter Temm", email = "cartertemm@gmail.com" }
]
dependencies = [
    "pyprowl",
    "requests"
]

[project.urls]
Homepage = "https://github.com/cartertemm/logsetup"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
